# gts-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
gts/: Cargo.toml
gts-cli/: Cargo.toml
gts-cli/src/: cli.rs  gen_schemas.rs  logging.rs  main.rs  server.rs
gts-macros/: Cargo.toml
gts-macros/src/: lib.rs
gts-macros/tests/: integration_tests.rs
gts/src/: entities.rs  files_reader.rs  gts.rs  gts_tests.rs  lib.rs  ops.rs  ops_tests.rs  path_resolver.rs  schema_cast.rs  store.rs  store_tests.rs  x_gts_ref.rs
