[package]
name = "gts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Global Type System (GTS) library for Rust"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
uuid.workspace = true
jsonschema.workspace = true
walkdir.workspace = true
tracing.workspace = true
shellexpand = "3.1"

[dev-dependencies]
